<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="225dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_monitoring"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/state_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_stete"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:id="@+id/time_start_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_start"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/time_end_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_end"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_time"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/start_end_button"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/text_button_start_sleep" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>