<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="124dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/text_menu"
            android:textSize="50sp" />

        <Button
            android:id="@+id/start_monit_button"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_gravity="center"
            android:text="@string/text_button_monitoring" />

        <Button
            android:id="@+id/data_button"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/text_button_data" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/text_button_settings" />

        <Button
            android:id="@+id/button2"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="Disconnetti" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:text="@string/battery_level" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>